# AgenticSellerPOC

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  WEB_SETUP.md  config.py  examples.py  main.py  memory.py  orchestrator.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_web.py  state.py
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-review.yml  labeler.yml  pr-labeler.yml
agenticseller/: __init__.py
agents/: __init__.py  base.py  classifier.py  crm.py  negotiator.py  seller.py  supervisor.py
crm_exports/: d2929ac4-8373-4138-8fa9-eab765620d15.json
tests/: __init__.py  conftest.py  test_agents.py  test_e2e.py  test_example.py  test_memory.py  test_orchestrator_setup.py  test_state.py  test_web_app.py  test_web_auth.py
web/: __init__.py  app.py  auth.py  database.py  models.py
web/templates/: access_denied.html  admin_users.html  base.html  dashboard.html  error.html  index.html
